Fix Booking constructors methods, remove autoincremental booking number, Fix Bookin test classes; Remove TestTreeMaps class; Add book method in Client class; Add init check methods to prevent NullPointerException for list and enums