@@ -21,9 +21,9 @@ import java.util.*;
  */
 public class TestBookingsMap {
 
-    private CalendarBookings calendarBookings = CalendarBookings.getInstance();
+    private final CalendarBookings calendarBookings = CalendarBookings.getInstance();
 
-    private Map <Day,List<Booking>> bookingsMap = calendarBookings.getBookingsMap();
+    private final Map <Day,List<Booking>> bookingsMap = calendarBookings.getBookingsMap();
 
     Client client1 = new Client("Mario","Rossi");
 
@@ -37,14 +37,14 @@ public class TestBookingsMap {
         System.out.println("workingday" + nowWorking);
         Day nowNotWorking = new Day(LocalDate.now(), WorkingDayEnum.NOT_WORKING);
         System.out.println("notworkingday" + nowNotWorking);
-        Booking booking1 = new Booking (new Client("Mario", "Rossi"), "2222-11-11 23:00", LocalDate.now(), LocalTime.now());
+        Booking booking1 = new Booking(1, new Client("Mario", "Rossi"), "2222-11-11 23:00", LocalDate.now(), LocalTime.now());
         System.out.println("booking1:" + booking1);
-        Booking booking2 = new Booking (new Client("Giuseppe", "Verdi"), "5555-11-11 23:00", LocalDate.now(), LocalTime.now());
+        Booking booking2 = new Booking(2, new Client("Giuseppe", "Verdi"), "5555-11-11 23:00", LocalDate.now(), LocalTime.now());
         System.out.println("booking1:" + booking2);
-        bookingsMap.put(nowWorking, new ArrayList<>(Arrays.asList(booking1)));
+        bookingsMap.put(nowWorking, new ArrayList<>(List.of(booking1)));
         System.out.println("Map keys after first adding: " + bookingsMap.keySet());
         System.out.println("Map values after first adding: " + bookingsMap.values());
-        bookingsMap.put(nowNotWorking,new ArrayList<>(Arrays.asList( booking2)));
+        bookingsMap.put(nowNotWorking,new ArrayList<>(List.of(booking2)));
         System.out.println("Map keys after second adding: " + bookingsMap.keySet());
         System.out.println("Map values after second adding: " + bookingsMap.values());
 
@@ -63,7 +63,7 @@ public class TestBookingsMap {
     @Test // create an interval over just activated interval
     public void testCreateBookingsInterval ( ) throws Exception {
         calendarBookings.createBookingsIntervalFromNow(10);
-        calendarBookings.book(client1, List.of(client1), getDateFromNow(7),LocalTime.of(12,00));
+        calendarBookings.book(1, client1, List.of(client1), getDateFromNow(7),LocalTime.of(12,00));
         calendarBookings.createBookingsIntervalFromStartDate(getDateFromNow(5),10);
         calendarBookings.printDetails();
     }
@@ -79,7 +79,7 @@ public class TestBookingsMap {
     public void testSetWorkingDays_02 ( ) throws Exception {
         calendarBookings.createBookingsIntervalFromNow(30);
         LocalDate date = getDateFromNow(3);
-        calendarBookings.book(client1,List.of(client1), date,LocalTime.of(12,00));
+        calendarBookings.book(1, client1,List.of(client1), date,LocalTime.of(12,00));
         try {
             calendarBookings.setWorkingDay(date,WorkingDayEnum.NOT_WORKING);
         } catch (Exception e){
@@ -110,7 +110,7 @@ public class TestBookingsMap {
     @Test
     public void testAddDefaultNotWorkingDayOfWeek_02 ( ) throws Exception {
         calendarBookings.createBookingsIntervalFromStartDate(LocalDate.of(2022,11,21),12);
-        calendarBookings.book(client1,List.of(client1), LocalDate.of(2022,11,23),LocalTime.of(12,00));
+        calendarBookings.book(1, client1,List.of(client1), LocalDate.of(2022,11,23),LocalTime.of(12,00));
         try {
             calendarBookings.addDefaultNotWorkingDayOfWeek(DayOfWeek.WEDNESDAY);
         }catch (Exception e){
